--- a/src/components/Offer.astro
+++ b/src/components/Offer.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<section id="offer" class="py-20 relative overflow-hidden">
+<section id="offer" class="py-10 md:py-20 relative overflow-hidden">
   <!-- Background Decoration -->
   <div
     class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[800px] h-[800px] bg-primary/5 rounded-full blur-3xl -z-10"
