--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -23,7 +23,7 @@ const formatDate = (date: Date) => {
 ---
 
 <Root title="Blog | Cogito Software" path="/blog">
-  <main class="min-h-screen pt-32 pb-24">
+  <main class="pt-20 md:pt-32 pb-8 md:pb-20">
     <div class="container mx-auto px-6 max-w-7xl">
       <!-- Header -->
       <header class="mb-20">
