--- a/src/pages/custom-solution.astro
+++ b/src/pages/custom-solution.astro
@@ -6,7 +6,7 @@ import { Cpu, Database, Network } from "@lucide/astro";
 <Root path="/custom-solution" title="Custom Solutions | Cogito Software">
   <main class="relative min-h-screen flex flex-col">
     <section
-      class="grow flex items-center justify-center relative overflow-hidden py-20"
+      class="grow flex items-center justify-center relative overflow-hidden py-8 md:py-16"
     >
       <div class="container mx-auto px-4 z-10 relative">
         <div class="max-w-5xl mx-auto">
