--- a/src/pages/partnership.astro
+++ b/src/pages/partnership.astro
@@ -5,7 +5,7 @@ import Root from "$layouts/Root.astro";
 <Root path="/partnership" title="Partnership | Cogito Software">
   <main class="relative min-h-screen flex flex-col">
     <section
-      class="grow flex items-center justify-center relative overflow-hidden py-20"
+      class="grow flex items-center justify-center relative overflow-hidden py-8 md:py-16"
     >
       <div class="container mx-auto px-4 z-10 relative">
         <div class="max-w-4xl mx-auto text-center">
