feat: rebrand MVP offer to Custom Solution, update related pages and components, enhance pricing display, and introduce new image assets for improved visual appeal

--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from "astro:assets";
-import AvatarVB from "$assets/images/bw.png";
-import AvatarDS from "$assets/images/dima.jpg";
+import AvatarVB from "$assets/images/bw-2.jpeg";
+import AvatarDS from "$assets/images/dima.png";
 import { Github, Linkedin, Twitter, Globe, FileText } from "@lucide/astro";
 
 const team = [
